--- a/src/templates/altaPresupuestos.html
+++ b/src/templates/altaPresupuestos.html
@@ -109,7 +109,7 @@
     }
 
     .table-presupuesto  {
-        max-height: 500px;
+        max-height: 700px;
         overflow-y: auto;
         overflow-x: auto;
     }
@@ -240,6 +240,12 @@
     background-color: #f0f0f0;
 }
 
+
+.form-control.is-valid, .was-validated .form-control:valid {
+    background-image: none !important;
+    padding: 6px 5px 5px 5px;
+}
+
 </style>
 {% endblock %}
 
@@ -261,7 +267,7 @@
 
     <br>
 
-    <div class="card mb-3">
+    <div class="card">
         <div class="card-body">
            
             <div class="table-responsive">
@@ -283,7 +289,10 @@
                         <tr>
                             <th scope="row" style="text-align: left;">NOMBRE PROYECTO:</th>
                             <td>
-                                <input type="text" class="form-control form-control-sm" id="PROYECTO" name="PROYECTO" autocomplete="off">
+                                <div class="position-relative">
+                                    <input type="text" class="form-control form-control-sm" id="PROYECTO" name="PROYECTO"  autocomplete="off" required>
+                                </div>
+                                
                                 <div id="suggestions" style="width: auto; position: absolute;" class="list-group"></div>
                                 <input type="text" style="display: none;" class="form-control form-control-sm" id="CLIENTE_ID" name="CLIENTE_ID">
                                 <input type="text" style="display: none;" class="form-control form-control-sm" id="PROYECTO_ID" name="PROYECTO_ID">
@@ -299,11 +308,11 @@
                                 <input type="text" class="form-control currency-input" name="FALTA_POR_COBRAR" id="FALTA_POR_COBRAR" value=0>
                             </td>
                             <td>
-                                <input type="text" class="form-control" id="PORCENTAJE_POR_COBRAR" name="PORCENTAJE_POR_COBRAR" style="width: 50px;" value=0>
+                                <input type="text" class="form-control" id="PORCENTAJE_POR_COBRAR" name="PORCENTAJE_POR_COBRAR" style="width: 50px;text-align: right;" value=0 readonly>
                             </td>
                             <th scope="row" style="text-align: right;">FECHA INICIO:</th>
                             <td>
-                                <input type="date" name="FECHA_INICIO"  id="FECHA_INICIO" class="form-control">
+                                <input type="date" name="FECHA_INICIO"  id="FECHA_INICIO" class="form-control" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -316,18 +325,18 @@
                                 <input type="text" class="form-control currency-input" name="PAGADO_CLIENTE" id="PAGADO_CLIENTE"  readonly>
                             </td>
                             <td>
-                                <input type="text" class="form-control" id="PORCENTAJE_PAGADO_CLIENTE" placeholder="%0" name="PORCENTAJE_PAGADO_CLIENTE" style="width: 50px;" value="{[presupuesto['pagado_cliente']}" readonly>
+                                <input type="text" class="form-control" id="PORCENTAJE_PAGADO_CLIENTE" placeholder="%0" name="PORCENTAJE_PAGADO_CLIENTE" style="width: 50px; text-align: right;" value="0">
                             </td>
                             <th scope="row" style="text-align: right;">FALTA POR GASTAR:</th>
                             <td>
                                 <input type="text" class="form-control currency-input" name="FALTA_POR_GASTAR"  id="FALTA_POR_GASTAR">
                             </td>
                             <td>
-                                <input type="text" class="form-control" id="PORCENTAJE_POR_GASTAR" value="0" name="PORCENTAJE_POR_GASTAR" style="width: 50px;">
+                                <input type="text" class="form-control" id="PORCENTAJE_POR_GASTAR" name="PORCENTAJE_POR_GASTAR" style="width: 50px; text-align: right;" value=0 readonly>
                             </td>
                             <th scope="row" style="text-align: right;">FECHA FIN:</th>
                             <td>
-                                <input type="date" name="FECHA_FIN" class="form-control" id="FECHA_FIN">
+                                <input type="date" name="FECHA_FIN" class="form-control" id="FECHA_FIN" readonly>
                             </td>
                         </tr>
                         <tr>
@@ -342,7 +351,7 @@
                                 <input type="text" class="form-control currency-input" name="GASTADO_REAL" id="GASTADO_REAL">
                             </td>
                             <td>
-                                <input type="text" class="form-control" name="PORCENTAJE_GASTADO_REAL" id="PORCENTAJE_GASTADO_REAL"  value="0" style="width: 50px;" readonly>
+                                <input type="text" class="form-control" name="PORCENTAJE_GASTADO_REAL" id="PORCENTAJE_GASTADO_REAL"  value=0 style="width: 50px;text-align: right;" readonly>
                             </td>
                             <th scope="row" style="text-align: right;">ESTADO DE OBRA:</th>
                             <td>
@@ -405,101 +414,118 @@
 
 
 <br>
-
-    <div class="container-fluid">
-        <div class="card">
-            <div class="card-body">
-                <div class="container-fluid">
-                    <br>
-                    <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                            <button class="btn botones add-row-btn"  type="button" onclick="añadirConcepto()">AGREGAR PARTIDA</button>
-                        </div>
-                    </div>
-                    <br>
-                    <!-- Contenedor donde se agregarán los modales dinámicamente -->
-                    <div id="subpresupuestos">
-    
-                    </div>
-                    <div class="table-presupuesto">
-                        <table id="DETALLE_PRESUPUESTO" class="table table-hover table-borderless">
-                            <colgroup>
-                                <!-- Agrega más columnas según sea necesario -->
-                                <col style="width: 40px;"> <!-- Primera columna -->
-                                <col style="width: 350px;"> <!-- Segunda columna -->
-                                <col style="width: 350px;"> <!-- Tercera columna -->
-                                <col style="width: 130px;"> <!-- Cuarta columna -->
-                                <col style="width: 130px;"> <!-- Quinta columna -->
-                                <col style="width: 130px;"> <!-- Sexta columna -->
-                                <col style="width: 90px;"> <!-- Séptima columna -->
-                                <col style="width: 230px;"> <!-- Octava columna -->
-                                <col style="width: 50px;"> <!-- Novena columna -->
-                                <!-- Añade más columnas si es necesario -->
-                            </colgroup>
-                            <thead class="thead-dark" style="text-align: center;">
-                                <tr>
-                                    <th style="white-space: normal;word-wrap: break-word;">NO</th>
-                                    <th>PARTIDA PRESUPUESTAL</th>
-                                    <th>CONTRATISTA / PROVEEDOR</th>
-                                    <th style="white-space: normal;word-wrap: break-word;">PRESUPUESTO CLIENTE COSTO DIRECTO IVA INC.</th>
-                                    <th style="white-space: normal;word-wrap: break-word;">PRESUPUESTO CONTRATISTAS IVA INC.</th>
-                                    <th style="white-space: normal;word-wrap: break-word;">DIFERENCIA PRESUPUESTOS</th>
-                                    <th style="white-space: normal;word-wrap: break-word;">CONTRATO FIRMADO</th>
-                                    <th>ESTATUS</th>
-                                    <th></th>
-                                    <!-- Agrega más encabezados si es necesario -->
-                                </tr>
-                            </thead>
-                            <tbody>
-    
-                            </tbody>
-                            <tfoot>
-                                <!-- Pie de tabla -->
-                                <tr>
-                                    <td colspan="3"class="text-end"><strong>SUBTOTAL:</strong></td>
-                                    <td><input type="text" id="subtotalCliente" name="subtotalCliente" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
-                                    <td><input type="text" id="subtotalContratista" name="subtotalContratista" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
-                                    <td><input type="text" name="subtotalDiferencia" id="subtotalDiferencia" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
-                                    <td colspan="3"></td>
-                                </tr>
-                                <tr>
-                                   
-                                    <td   colspan="3" class="text-end"><strong>% INDIRECTO:</strong></td>
-                                    <td><input type="number"  name="porcentajeIndirecto" id="porcentajeIndirecto" min='0' class="form-control"
-                                            style="text-align: center;width: 110px;" placeholder="0"
-                                            onchange="calcularTotalConIndirecto()" disabled></td>
-                                    <td colspan="5"></td>
-                                </tr>
-                                <tr>
-                                
-                                    <td  colspan="3" class="text-end"><strong>TOTAL INDIRECTO:</strong></td>
-                                    <td><input type="text" id="totalIndirectoCliente" name="totalIndirectoCliente" class="form-control  currency-input"
-                                            placeholder="$0.00" disabled></td>
-                                    <td colspan="5"></td>
-                                </tr>
-                                <tr>
-                                    <td colspan="3" class="text-end"><strong>TOTAL:</strong></td>
-                                    <td><input type="text" id="totalCliente" name="totalCliente" class="form-control  currency-input"
-                                            placeholder="$0.00" disabled></td>
-                                    <td><input type="text" id="totalContratista"  name="totalContratista" class="form-control  currency-input"
-                                            placeholder="$0.00" disabled></td>
-                                    <td><input type="text" id="totalDiferencia" name="totalDiferencia" class="form-control  currency-input"
-                                            placeholder="$0.00" disabled></td>
-                                    <td colspan="3"></td>
-                                </tr>
-                            </tfoot>
-                        </table>
-                    </div>
+<div class="card">
+    <div class="card-body">
+        <div class="container-fluid">
+            <br>
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <button class="btn botones add-row-btn"  type="button" onclick="añadirConcepto()">AGREGAR PARTIDA</button>
                 </div>
             </div>
+            <br>
+            <!-- Contenedor donde se agregarán los modales dinámicamente -->
+            <div id="subpresupuestos">
+
+            </div>
+            <div class="table-presupuesto">
+                <table id="DETALLE_PRESUPUESTO" class="table table-hover table-borderless">
+                    <colgroup>
+                        <!-- Agrega más columnas según sea necesario -->
+                        <col style="width: 40px;"> <!-- Primera columna -->
+                        <col style="width: 350px;"> <!-- Segunda columna -->
+                        <col style="width: 350px;"> <!-- Tercera columna -->
+                        <col style="width: 130px;"> <!-- Cuarta columna -->
+                        <col style="width: 130px;"> <!-- Quinta columna -->
+                        <col style="width: 130px;"> <!-- Sexta columna -->
+                        <col style="width: 90px;"> <!-- Séptima columna -->
+                        <col style="width: 230px;"> <!-- Octava columna -->
+                        <col style="width: 50px;"> <!-- Novena columna -->
+                        <!-- Añade más columnas si es necesario -->
+                    </colgroup>
+                    <thead class="thead-dark" style="text-align: center;">
+                        <tr>
+                            <th style="white-space: normal;word-wrap: break-word;">NO</th>
+                            <th>PARTIDA PRESUPUESTAL</th>
+                            <th>CONTRATISTA / PROVEEDOR</th>
+                            <th style="white-space: normal;word-wrap: break-word;">PRESUPUESTO CLIENTE COSTO DIRECTO IVA INC.</th>
+                            <th style="white-space: normal;word-wrap: break-word;">PRESUPUESTO CONTRATISTAS IVA INC.</th>
+                            <th style="white-space: normal;word-wrap: break-word;">DIFERENCIA PRESUPUESTOS</th>
+                            <th style="white-space: normal;word-wrap: break-word;">CONTRATO FIRMADO</th>
+                            <th>ESTATUS</th>
+                            <th></th>
+                            <!-- Agrega más encabezados si es necesario -->
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                    <tfoot>
+                        <!-- Pie de tabla -->
+                        <tr>
+                            <td colspan="3"class="text-end"><strong>SUBTOTAL:</strong></td>
+                            <td><input type="text" id="subtotalCliente" name="subtotalCliente" class="form-control  currency-input"
+                                    placeholder="$0.00" readonly></td>
+                            <td><input type="text" id="subtotalContratista" name="subtotalContratista" class="form-control  currency-input"
+                                    placeholder="$0.00" readonly></td>
+                            <td><input type="text" name="subtotalDiferencia" id="subtotalDiferencia" class="form-control  currency-input"
+                                    placeholder="$0.00" readonly></td>
+                            <td colspan="3"></td>
+                        </tr>
+                        <tr>
+                           
+                            <td   colspan="3" class="text-end"><strong>% INDIRECTO:</strong></td>
+                            <td><input type="number"  name="porcentajeIndirecto" id="porcentajeIndirecto" min='0' class="form-control"
+                                    style="text-align: center;width: 110px;" placeholder="0"
+                                    onchange="calcularTotalConIndirecto()" disabled></td>
+                            <td colspan="5"></td>
+                        </tr>
+                        <tr>
+                        
+                            <td  colspan="3" class="text-end"><strong>TOTAL INDIRECTO:</strong></td>
+                            <td><input type="text" id="totalIndirectoCliente" name="totalIndirectoCliente" class="form-control  currency-input"
+                                    placeholder="$0.00" disabled></td>
+                            <td colspan="5"></td>
+                        </tr>
+                        <tr>
+                            <td colspan="3" class="text-end"><strong>TOTAL:</strong></td>
+                            <td><input type="text" id="totalCliente" name="totalCliente" class="form-control  currency-input"
+                                    placeholder="$0.00" disabled></td>
+                            <td><input type="text" id="totalContratista"  name="totalContratista" class="form-control  currency-input"
+                                    placeholder="$0.00" disabled></td>
+                            <td><input type="text" id="totalDiferencia" name="totalDiferencia" class="form-control  currency-input"
+                                    placeholder="$0.00" disabled></td>
+                            <td colspan="3"></td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
-        <br>
     </div>
+</div>
+<br>
 </form>
 <script src="{{ url_for('static', filename='JS/funcionesAltaPresupuesto.js') }}"></script>
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+(() => {
+  'use strict'
 
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  const forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.from(forms).forEach(form => {
+    form.addEventListener('submit', event => {
+      if (!form.checkValidity()) {
+        event.preventDefault()
+        event.stopPropagation()
+      }
+
+      form.classList.add('was-validated')
+    }, false)
+  })
+})()
+</script>
 
 {% endblock %}
